Ajout Complexité et preuves

--- a/Livrable1.ipynb
+++ b/Livrable1.ipynb
@@ -120,9 +120,38 @@
    "metadata": {},
    "source": [
     "## Compléxité asymptotique\n",
-    "Variante du Traveling Salesman Problem (TSP) en considérant plusieurs véhicules pour réaliser le trajet plutôt qu'un seul.\n",
+    "### Description théorique\n",
     "\n",
-    "NP-Difficile"
+    "Le problème du Voyageur de Commerce (TSP) et le problème des circuits eulériens sont particulièrement pertinents. La nature de ces problèmes nous aide à comprendre les défis associés à la résolution de tels problèmes à grande échelle.\n",
+    "\n",
+    "1. Problème du voyageur de commerce (TSP) :\n",
+    "- Définition : trouver le chemin le plus court permettant de visiter chaque ville exactement une fois et de revenir à la ville de départ\n",
+    "- Complexité : le TSP est NP-complet, ce qui signifique qu'aucun algorithme polynomial n'est connu pour résoudre toutes les instances du TSP de manière optimale. La complexité est expontentielle dans le pire des cas.\n",
+    "\n",
+    "2. Problème des circuits eulériens :\n",
+    "- Définition : trouver un chemin dans un grapge qui passe exactement une fois par chaque arrête (ou rue) et revient au point de départ.\n",
+    "- Complexité : le problème est résolu en temps polynomial si le grapge est connexe et que tout les sommets ont un degré pair, sinon pas de cycle eulérien.\n",
+    "\n",
+    "3. Problème d'optimisation :\n",
+    "- Définition : Minimiser le temps total de la tournée dans le réseau routier en respectant certaines contraintes (visiter chaque ville une fois, revenir au point de départ...)\n",
+    "- Complexité : Ce type de problème est souvent modelisé comme un programme linéraire en nombres entiers.\n",
+    "\n",
+    "### Preuves et justifications\n",
+    "\n",
+    "1. Preuve de la NP-Complétude :\n",
+    "- Réduction polynomiale : le TSP peut être réduit à partir du problème du circuit hamiltonien, un problème bien connu pour être NP-complet. Étant donné un graphe G=(V,E), on peut construire une matrice de distance où les arêtes existantes ont une distance 1 et les arêtes non existantes une distance infinie. Trouver un cycle hamiltonien revient alors à trouver un cycle de coût minimal dans ce graphe.\n",
+    "- Théorème de Cook-Levin : ce théorème établit que de nombreux problèmes de décision (comme le circuit hamiltonien) sont NP-complets, ce qui implique que le TSP est également NP-complet par réduction polynomiale.\n",
+    "\n",
+    "2. Appartenance à NP :\n",
+    "- Certificat vérifiable en temps polynomial : pour prouver qu'un problème est dans NP, il faut montrer qu'une solution proposée peut être vérifiée en temps polynomial. Pour le TSP, une séquence de villes peut être vérifiée en calculant la distance totale du trajet et en s'assurant que chaque ville est visitée exactement une fois, ce qui peut être fait en temps polynomial.\n",
+    "\n",
+    "3. Modélisation en Recherche Opérationnelle :\n",
+    "- Programmation linéaire : le TSP peut être formulé comme un problème de programmation linéaire en nombres entiers. On introduit des variables binaires pour chaque paire de villes indiquant si un trajet direct est pris ou non, et on ajoute des contraintes pour garantir que chaque ville est visitée exactement une fois et que le trajet forme un cycle.\n",
+    "- Méthode du Simplexe : bien que le simplexe soit efficace pour de nombreux problèmes de programmation linéaire, il peut ne pas être optimal pour le TSP en raison de la nature combinatoire du problème. Des méthodes comme le Branch and Cut, qui combine la programmation linéaire et des techniques de séparation, sont plus adaptées.\n",
+    "\n",
+    "4. Approches Heuristiques et Méta-Heuristiques :\n",
+    "- Algorithme du plus proche voisin (Nearest Neighbor) : une méthode heuristique simple avec une complexité O(n^2), mais qui ne garantit pas la solution optimale.\n",
+    "- Algorithmes génétiques, recuit simulé, colonies de fourmis : ces méthodes inspirées de processus naturels offrent un compromis entre qualité de la solution et temps de calcul. Elles explorent l'espace de solution de manière stochastique et adaptative, souvent conduisant à des solutions satisfaisantes en des temps de calcul raisonnables."
    ]
   },
   {
