--- a/Livrable1.ipynb
+++ b/Livrable1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233c768e",
+   "id": "63420eed",
    "metadata": {},
    "source": [
     "### Problème\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e1fbc13",
+   "id": "70583556",
    "metadata": {},
    "source": [
     "### Problème décisionel lié\n",
@@ -86,7 +86,7 @@
     "- $V_{ij} >= 0$ (Les poids sont à zéro sur la diagonale de la matrice car il s'agit de la même ville. Des poids négatifs indiquent qu'il n'existe pas de chemins entre les villes)\n",
     "##### Le point de départ fait partie des villes\n",
     "- $O = V_{ij}$\n",
-    "##### Containte de non négativité - Il doit y avoir au moins un camion pour réaliser la tournée\n",
+    "##### Contrainte de non négativité - Il doit y avoir au moins un camion pour réaliser la tournée\n",
     "- $n > 0$"
    ]
   },
@@ -104,14 +104,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe1d3ba",
+   "id": "d84c419a",
    "metadata": {},
    "source": [
     "## Algorithme\n",
     "Inspiration de l'[Hybrid Genetic Search](https://arxiv.org/pdf/2012.10384)\n",
     "\n",
-    "- Chercher le cycle regroupant le plus de sommets ayant des caractéristiques communes (dans le cas ou certains objets ne pourrait être livrés que par certains camions)\n",
-    "- Séparer ce cycle en deux parties (le découpage est fait de tel sorte que la sommes des poids des arêtes des cycles résultants soit la plus"
+    "1. Chercher le cycle regroupant le plus de sommets ayant des caractéristiques communes (dans le cas ou certains objets ne pourrait être livrés que par certains camions).\n",
+    "2. Séparer ce cycle en deux parties (le découpage est fait de tel sorte que la sommes des poids des arêtes des cycles résultants soit la plus faible possible.\n",
+    "3. Reproduire l'étape précedente (2) afin d'obtenir $n$ cycles, représentant les trajets des camions."
    ]
   },
   {
