--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -11,7 +11,7 @@
     "    <hr style=\"width: 60%; margin: auto;\">\n",
     "    <h1>Recherche Opérationnelle – Mobilité Durable</h1>\n",
     "    <hr style=\"width: 60%; margin: auto;\">\n",
-    "    <h4 style=\"margin-top: 200px;\">Barcelo Tom – DEXES Victor – MENANTEAU Melvin – PETIT Victor</h4>\n",
+    "    <h4 style=\"margin-top: 200px;\">BARCELO Tom – DEXES Victor – MENANTEAU Melvin – petit Victor</h4>\n",
     "</div>"
    ]
   },
