--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -26,8 +26,16 @@
     "   - Contexte\n",
     "   - Objectif\n",
     "3. [Partie 1 : Modélisation](#partie-1--modélisation)\n",
+    "   - Description\n",
+    "   - Modèle formelle\n",
+    "   - Analyse de la complexité\n",
+    "   - Méthodologie\n",
     "4. [Partie 2 : Implémentation](#partie-2--implémentation)\n",
+    "   - Implémentation\n",
+    "   - Exploitation\n",
     "5. [Conclusion](#conclusion)\n",
+    "   - Résumé\n",
+    "   - Travaux futurs\n",
     "6. [Références](#références)"
    ]
   },
@@ -85,14 +93,19 @@
     "## Partie 1 : Modélisation\n",
     "\n",
     "### Description\n",
+    "Description détaillée du problème abordé.\n",
     "\n",
     "### Modèle Formelle\n",
+    "Présentation de la modélisation formelle du problème, dont les formulations mathématiques.\n",
     "\n",
     "### Analyse de la complexité\n",
+    "Analyse la complexité du problème et de l'algorithme choisi.\n",
     "\n",
     "### Méthodologie\n",
     "#### Approche choisie\n",
-    "#### Détails de l'algorithme"
+    "Explication en détail de l'approche choisie.\n",
+    "#### Détails de l'algorithme\n",
+    "Détails complets sur l'algorithme utilisé."
    ]
   },
   {
@@ -102,7 +115,8 @@
     "## Partie 2 : Implémentation\n",
     "\n",
     "### Implémentation\n",
-    "#### Code Python"
+    "#### Code Python\n",
+    "Documentation et fonctionnalitées."
    ]
   },
   {
@@ -119,15 +133,20 @@
     "#### Démonstration du fonctionnement\n",
     "\n",
     "**Cas de test 1 : 25 villes**\n",
+    "Résultats détaillés et analyse.\n",
     "\n",
     "**Cas de test 2 : 100 villes**\n",
+    "Résultats détaillés et analyse.\n",
     "\n",
     "### Éxploitation \n",
     "#### Mise en place\n",
+    "Description de la mise en place.\n",
     "\n",
     "#### Résultats\n",
+    "Présentez les résultats expérimentaux avec des analyses statistiques appropriées (moyenne, médiane, écart-type).\n",
     "\n",
-    "#### Proposition d'amélioration"
+    "#### Proposition d'amélioration\n",
+    "Proposition d'améliorations possibles basées sur les résultats."
    ]
   },
   {
@@ -137,15 +156,18 @@
     "## Conclusion\n",
     "\n",
     "### Résumé\n",
+    "Points et conclusions clés.\n",
     "\n",
-    "### Travaux futurs"
+    "### Travaux futurs\n",
+    "Recherches et propositions potentielles."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Références"
+    "## Références\n",
+    "Liste des références utilisées dans le projet."
    ]
   }
  ],
