feat (Livrable2): Modèle formel

--- a/Livrable2.ipynb
+++ b/Livrable2.ipynb
@@ -94,9 +94,60 @@
     "\n",
     "### Description\n",
     "Description détaillée du problème abordé.\n",
+    "Il s'agit d'un problème de tournée de véhicule ([VRP](https://en.wikipedia.org/wiki/Vehicle_routing_problem)), dont l'objectif est de trouver un itinéraire optimal pour un ou plusieurs véhicules afin de livrer un ensemble de villes.\n",
     "\n",
-    "### Modèle Formelle\n",
-    "Présentation de la modélisation formelle du problème, dont les formulations mathématiques.\n",
+    "### Modèle Formel\n",
+    "On peut représenter le problème sous forme de graphe non orienté, où les sommets représentent les villes et les arrêtes les routes reliant ces dernières. Chaque arrête est pondérée par la distance entre les deux villes qu'elle relie.\n",
+    "\n",
+    "D'un point de vue mathématique, on peut définir le problème de la manière suivante :\n",
+    "- Soit $G = (V, E)$ un graphe non orienté complet, où $V$ est l'ensemble des sommets (villes) et $E$ l'ensemble des arrêtes (routes).\n",
+    "- $v$ le nombre de villes.\n",
+    "- $n$ un entier réprésentant le nombre de véhicules.\n",
+    "- $d_{ij}$ la distance entre les villes $i$ et $j$.\n",
+    "- $x_{ijk}$ une variable binaire indiquant si le véhicule $k$ emprunte la route entre les villes $i$ et $j$.\n",
+    "- $s$ le dépot de départ.\n",
+    "\n",
+    "#### Fonction objectif\n",
+    "Minimiser la somme des distances parcourues par les véhicules :\n",
+    "$$\n",
+    "\\min \\sum_{i \\in V} \\sum_{j \\in V} \\sum_{k = 1}^{n} d_{ij} \\cdot x_{ijk}\n",
+    "$$\n",
+    "\n",
+    "#### Variables de décision\n",
+    "- $x_{ijk} \\in \\{0, 1\\}$ : variable binaire indiquant si le véhicule $k$ emprunte la route entre les villes $i$ et $j$.\n",
+    "- $u_i$ : variable continue indiquant la position de la ville $i$ dans la tournée.\n",
+    "\n",
+    "#### Contraintes\n",
+    "- ##### Chaque ville doit être visitée <ins>au moins</ins> une fois par un véhicule :\n",
+    "Explication: La variable binaire $x$ indique si le chemin entre les villes $i$ et $j$ est emprunté par le véhicule $k$. En faisant la somme de toutes les varable $x$ pour chaque ville $i$ et $j$, quelque soit le camion, on s'assure que chaque ville est visitée au moins une fois par un véhicule.\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{j = 1}^v \\sum_{k = 1}^n x_{ijk} \\geq 1\n",
+    "$$\n",
+    "- ##### L'ensemble des villes visitées par un véhicule doit former un cycle :\n",
+    "Explication: Pour s'assurer que le chemin parcouru forme un cycle, on vérifie que pour chaque ville visitée par un camion, il y a un trajet d'arrivé vers cette ville et un trajet de départ.\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{k = 1}^n (\\sum_{j = 1}^v x_{ijk} - \\sum_{j = 1}^v x_{jik}) = 0\n",
+    "$$\n",
+    "- ##### Tous les camions doivent partir depuis le dépot :\n",
+    "Explication: Le nombre de variable binaire $x$ partant du dépot doit être égal au nombre de camions.\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{k = 1}^n x_{sik} = n\n",
+    "$$\n",
+    "- ##### Tous les camions doivent revenir au dépot :\n",
+    "Explication: Le nombre de variable binaire $x$ arrivant au dépot doit être égal au nombre de camions.\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{k = 1}^n x_{isk} = n\n",
+    "$$\n",
+    "- ##### Un véhicule ne peut pas partir d'une ville et y revenir directement (pas de boucle) :\n",
+    "Explication: Pour chaque ville, on vérifie que la somme des trajets partant et arrivant à cette ville par un trajet direct est égal à 0.\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{k = 1}^n x_{iik} = 0\n",
+    "$$\n",
+    "- ##### Empêcher les sous-tours :\n",
+    "Explication: Chaque ville doit être reliée à une autre ville visitée par le même véhicule (Miller-Tucker-Zemlin).\n",
+    "$$\n",
+    "\\sum_{i = 1}^v \\sum_{j = 1}^v u_i - u_j + (v - 1) \\cdot x_{ijk} \\leq v - 2\n",
+    "$$\n",
     "\n",
     "### Analyse de la complexité\n",
     "Analyse la complexité du problème et de l'algorithme choisi.\n",
